--- a/Codelab/Game/index.html
+++ b/Codelab/Game/index.html
@@ -10,7 +10,8 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js"></script>
     <script src="Sprite.js"></script>
-    <script src="RainDropEnemy.js"></script>
+    <script src="objects/RainDropEnemy.js"></script>
+    <script src="objects/RainDropShooter.js"></script>
     <script src="objects/Enemy.js"></script>
     <script src="objects/Bullet.js"></script>
     <script src="objects/Ship.js"></script>
